[package]
name = "stormcrow_boom"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
fastrand = "2.3.0"
log = "0.4.29"
simplelog = "0.12.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-serial = "5.4.5"
mm2t = { git = "ssh://git@bitbucket.org:norris14597mil/stormcrow_mm2t.git", tag = "v0.1.2", features = ["mm2t-tx"] }
