[package]
name = "stormcrow_boom"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
fastrand = "2.3.0"
tokio = { version = "^1.49", features = ["full"] }
tokio-serial = "5.4.5"
[dependencies.utils]
git = "ssh://git@bitbucket.org/norris14597mil/stormcrow_utils.git"
package = "stormcrow_utils"
tag = "v0.1.8"
features = ["mm2t-tx"]
